--- a/java/res/values-hu/strings.xml
+++ b/java/res/values-hu/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Android-billentyűzet (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Beviteli beállítások"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Naplózási parancsok"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Androidos helyesírás-ellenőrző (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Névjegyek keresése"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"A helyesírás-ellenőrző használja a névjegyek bejegyzéseit"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Rezgés billentyű megnyomása esetén"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Hangbevivel KI"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Beviteli módok beállítása"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Beviteli nyelvek"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Visszajelzés küldése"</string>
     <string name="select_language" msgid="3693815588777926848">"Beviteli nyelvek"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Érintse meg újból a mentéshez"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Van elérhető szótár"</string>
@@ -170,39 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Alapértelmezett"</string>
     <string name="language_settings" msgid="1671153053201809031">"Nyelv és bevitel"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Beviteli mód kiválasztása"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Szótárszolgáltató"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Szótárszolgáltató"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Szótár szolgáltatás"</string>
-    <string name="download_description" msgid="3274861514695032954">"Szótárfrissítéssel kapcsolatos információk"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Bővítmények: szótárak"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Van rendelkezésre álló szótár"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Szótárak beállításai"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Felhasználói szótárak"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Felhasználói szótár"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Van rendelkezésre álló szótár"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Jelenlegi letöltések"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Telepítve"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Telepítve, kikapcsolva"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Csatlakozási hiba"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Nincs szótár"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Frissítés"</string>
-    <string name="last_update" msgid="3101549719827600346">"Utoljára frissítve"</string>
-    <string name="message_updating" msgid="820186276704134720">"Frissítések keresése"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Betöltés..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Fő szótár"</string>
-    <string name="cancel" msgid="5586531736609183304">"Mégse"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Telepítés"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Letöltés megszakítása"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Kikapcsolás"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Bekapcsolás"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Törlés"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"<xliff:g id="LANGUAGE">%1$s</xliff:g> nyelvhez van rendelkezésre álló szótár"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Nyomja meg az áttekintéshez és letöltéshez"</string>
+    <string name="app_name" msgid="6320102637491234792">"Szótárszolgáltató"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Szótárszolgáltató"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Szótárszolgáltatás"</string>
+    <string name="download_description" msgid="6014835283119198591">"Szótárfrissítéssel kapcsolatos információk"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Bővítmények: szótárak"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Van rendelkezésre álló szótár"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Szótárak beállításai"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Felhasználói szótárak"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Felhasználói szótár"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Van rendelkezésre álló szótár"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Jelenlegi letöltések"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Telepítve"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Telepítve, kikapcsolva"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Csatlakozási hiba"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Nincs szótár"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Frissítés"</string>
+    <string name="last_update" msgid="730467549913588780">"Legutóbb frissítve"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Frissítések keresése"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Betöltés..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Fő szótár"</string>
+    <string name="cancel" msgid="6830980399865683324">"Mégse"</string>
+    <string name="install_dict" msgid="180852772562189365">"Telepítés"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Mégse"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Törlés"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"A mobileszközön kiválasztott nyelvhez szótár érhető el.&lt;br/&gt; A gépelési élmény javításához javasoljuk a(z) <xliff:g id="LANGUAGE">%1$s</xliff:g> szótár &lt;b&gt;letöltését.&lt;br/&gt; &lt;br/&gt; A letöltés 3G hálózaton keresztül néhány percig tart. Ha &lt;b&gt;előfizetése nem korlátlan&lt;/b&gt;, a letöltés költségekkel járhat.&lt;br/&gt; Ha nem biztos abban, hogy milyen adatcsomagot használ, javasoljuk, hogy keressen egy Wi-Fi kapcsolatot a letöltés automatikus elindításához.&lt;br/&gt; &lt;br/&gt; Tipp: a szótárakat a mobileszköz &lt;b&gt;Beállítások&lt;/b&gt; menüjében a &lt;b&gt;Nyelv és bevitel&lt;/b&gt; részben töltheti le és távolíthatja el."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Töltse le most (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Letöltés Wi-Fivel"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"<xliff:g id="LANGUAGE">%1$s</xliff:g> nyelvhez van rendelkezésre álló szótár"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Nyomja meg az áttekintéshez és letöltéshez"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Letöltés: a(z) <xliff:g id="LANGUAGE">%1$s</xliff:g> nyelvvel kapcsolatos javaslatok hamarosan elérhetők lesznek."</string>
 </resources>
