--- a/java/res/values-it/strings.xml
+++ b/java/res/values-it/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Tastiera Android (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Opzioni inserimento"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Ricerca comandi di log"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Controllo ortografico Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Cerca in nomi contatti"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"La funzione di controllo ortografico usa voci dell\'elenco contatti"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Vibrazione tasti"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Input vocale disatt."</string>
     <string name="configure_input_method" msgid="373356270290742459">"Configura metodi di immissione"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Lingue comandi"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Invia feedback"</string>
     <string name="select_language" msgid="3693815588777926848">"Lingue comandi"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Tocca di nuovo per salvare"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Dizionario disponibile"</string>
@@ -170,36 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Predefinito"</string>
     <string name="language_settings" msgid="1671153053201809031">"Lingua e input"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Scegli il metodo di immissione"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Dictionary Provider"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Dictionary Provider"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Servizio dizionario"</string>
-    <string name="download_description" msgid="3274861514695032954">"Informazioni aggiornate dizionari"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Dizionari aggiuntivi"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Dizionario disponibile"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Impostazioni per dizionari"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Dizionari utente"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Dizionario utente"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Dizionario disponibile"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"In fase di download"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Installato"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Installato, disabilitato"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Problema conness. dizion."</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Nessun dizionario"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Aggiorna"</string>
-    <string name="last_update" msgid="3101549719827600346">"Ultimo aggiornamento"</string>
-    <string name="message_updating" msgid="820186276704134720">"Verifica disponibilità aggiornamenti"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Caricamento..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Dizionario principale"</string>
-    <string name="cancel" msgid="5586531736609183304">"Annulla"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Installa"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Annulla download"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Disattiva"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Abilita"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Elimina"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"La lingua selezionata sul tuo dispositivo mobile ha un dizionario disponibile.&lt;br/&gt; Ti consigliamo di &lt;b&gt;scaricare&lt;/b&gt; il dizionario di <xliff:g id="LANGUAGE">%1$s</xliff:g> per migliorare l\'esperienza di digitazione.&lt;br/&gt; &lt;br/&gt; Il download potrebbe richiedere un paio di minuti su reti 3G. Potrebbero essere applicate delle tariffe se non disponi di un &lt;b&gt;piano dati illimitato&lt;/b&gt;.&lt;br/&gt; Se non sai bene quale piano dati è in uso, ti consigliamo di trovare una connessione Wi-Fi per avviare il download automaticamente.&lt;br/&gt; &lt;br/&gt; Suggerimento. Puoi scaricare e rimuovere i dizionari passando a &lt;b&gt;Lingue e immissione&lt;/b&gt; nel menu &lt;b&gt;Impostazioni&lt;/b&gt; del tuo dispositivo mobile."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"Scarica ora (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"Scarica tramite Wi-Fi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"È disponibile un dizionario per <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Premi per esaminare e scaricare"</string>
+    <string name="app_name" msgid="6320102637491234792">"Dictionary Provider"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Dictionary Provider"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Servizio dizionario"</string>
+    <string name="download_description" msgid="6014835283119198591">"Informazioni aggiornamento dizionari"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Dizionari aggiuntivi"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Dizionario disponibile"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Impostazioni per dizionari"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Dizionari utente"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Dizionario utente"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Dizionario disponibile"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"In fase di download"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Installato"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Installato, disabilitato"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Conness. diz. imposs"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Nessun dizionario"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Aggiorna"</string>
+    <string name="last_update" msgid="730467549913588780">"Ultimo aggiornamento"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Verifica disponibilità aggiornamenti"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Caricamento in corso..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Dizionario principale"</string>
+    <string name="cancel" msgid="6830980399865683324">"Annulla"</string>
+    <string name="install_dict" msgid="180852772562189365">"Installa"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Annulla"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Elimina"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Per la lingua selezionata sul dispositivo mobile è disponibile un dizionario.&lt;br/&gt; Ti consigliamo di &lt;b&gt;scaricare&lt;/b&gt; il dizionario in <xliff:g id="LANGUAGE">%1$s</xliff:g> per migliorare l\'esperienza di digitazione.&lt;br/&gt; &lt;br/&gt; Il download potrebbe richiedere un paio di minuti su 3G. Potrebbero essere applicati costi se non disponi di un &lt;b&gt;piano dati illimitato&lt;/b&gt;.&lt;br/&gt; Se non sei sicuro di quale sia il tuo piano dati, dovresti trovare una connessione Wi-Fi per avviare il download automaticamente.&lt;br/&gt; &lt;br/&gt; Suggerimento. Puoi scaricare e rimuovere dizionari passando a &lt;b&gt;Lingue e immissione&lt;/b&gt; nel menu &lt;b&gt;Impostazioni&lt;/b&gt; del dispositivo mobile."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Scarica ora (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Scarica tramite Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"È disponibile un dizionario per <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Premi per esaminare e scaricare"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Download: i suggerimenti per <xliff:g id="LANGUAGE">%1$s</xliff:g> saranno pronti a breve."</string>
 </resources>
