--- a/java/res/values-iw/strings.xml
+++ b/java/res/values-iw/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"מקלדת Android ‏(AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"אפשרויות קלט"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"פקודות יומן מחקר"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"בודק האיות של Android ‏(AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"חפש שמות של אנשי קשר"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"בודק האיות משתמש בערכים מרשימת אנשי הקשר שלך"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"רטט בלחיצה על מקשים"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"הקלט הקולי מושבת"</string>
     <string name="configure_input_method" msgid="373356270290742459">"הגדרת שיטות קלט"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"שפות קלט"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"שלח משוב"</string>
     <string name="select_language" msgid="3693815588777926848">"שפות קלט"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"גע שוב כדי לשמור"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"מילון זמין"</string>
@@ -170,36 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"ברירת מחדל"</string>
     <string name="language_settings" msgid="1671153053201809031">"שפה וקלט"</string>
     <string name="select_input_method" msgid="4301602374609275003">"בחירת שיטת קלט"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"ספק המילון"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"ספק המילון"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"שירות מילון"</string>
-    <string name="download_description" msgid="3274861514695032954">"פרטי עדכון מילון"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"הוספת מילונים"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"מילון זמין"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"הגדרות עבור מילונים"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"מילוני משתמש"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"מילון משתמש"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"מילון זמין"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"מוריד כעת"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"מותקן"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"מותקן, מושבת"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"בעיה בהתחברות לשירות המילון"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"אין מילונים זמינים"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"רענן"</string>
-    <string name="last_update" msgid="3101549719827600346">"עודכן לאחרונה"</string>
-    <string name="message_updating" msgid="820186276704134720">"מחפש עדכונים"</string>
-    <string name="message_loading" msgid="8611339149825047446">"טוען..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"מילון ראשי"</string>
-    <string name="cancel" msgid="5586531736609183304">"ביטול"</string>
-    <string name="install_dict" msgid="5525005524697607865">"התקן"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"בטל הורדה"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"השבת"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"הפוך לפעיל"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"מחק"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"לשפה הנבחרת במכשיר הנייד שלך יש מילון זמין.&lt;br/&gt; אנו ממליצים &lt;b&gt;להוריד&lt;/b&gt; את המילון ב<xliff:g id="LANGUAGE">%1$s</xliff:g> כדי לשפר את חוויית ההקלדה.&lt;br/&gt; &lt;br/&gt; ההורדה עשויה לארוך דקה או שתיים ב-3G. ייתכן שתחויב אם אין לך &lt;b&gt;תוכנית נתונים בלתי מוגבלת&lt;/b&gt;.&lt;br/&gt; אם אינך בטוח איזו תוכנית נתונים יש לך, אנו ממליצים לחפש חיבור Wi-Fi כדי להתחיל בהורדה באופן אוטומטי.&lt;br/&gt; &lt;br/&gt; טיפ: ניתן להוריד ולהסיר מילונים ב&lt;b&gt;שפה וקלט&lt;/b&gt; בתפריט &lt;b&gt;הגדרות&lt;/b&gt; של המכשיר הנייד שלך."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"הורד עכשיו (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"הורד באמצעות Wi-Fi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"יש מילון זמין עבור <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"לחץ כדי לעיין ולהוריד"</string>
+    <string name="app_name" msgid="6320102637491234792">"ספק המילון"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"ספק המילון"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"שירות מילון"</string>
+    <string name="download_description" msgid="6014835283119198591">"פרטי עדכון מילון"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"תוספי מילונים"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"מילון זמין"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"הגדרות עבור מילונים"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"מילוני משתמש"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"מילון משתמש"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"מילון זמין"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"מוריד כעת"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"מותקן"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"מותקן, מושבת"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"בעיה בהתחברות לשירות המילון"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"אין מילונים זמינים"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"רענן"</string>
+    <string name="last_update" msgid="730467549913588780">"עודכן לאחרונה"</string>
+    <string name="message_updating" msgid="4457761393932375219">"מחפש עדכונים"</string>
+    <string name="message_loading" msgid="8689096636874758814">"טוען..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"מילון ראשי"</string>
+    <string name="cancel" msgid="6830980399865683324">"ביטול"</string>
+    <string name="install_dict" msgid="180852772562189365">"התקן"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"בטל"</string>
+    <string name="delete_dict" msgid="756853268088330054">"מחק"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"לשפה הנבחרת במכשיר הנייד שלך יש מילון זמין.&lt;br/&gt; אנו ממליצים &lt;b&gt;להוריד&lt;/b&gt; את המילון ב<xliff:g id="LANGUAGE">%1$s</xliff:g> כדי לשפר את חוויית ההקלדה.&lt;br/&gt; &lt;br/&gt; ההורדה עשויה לארוך דקה או שתיים ב-3G. ייתכן שתחויב אם אין לך &lt;b&gt;תוכנית נתונים בלתי מוגבלת&lt;/b&gt;.&lt;br/&gt; אם אינך בטוח איזו תוכנית נתונים יש לך, אנו ממליצים לחפש חיבור Wi-Fi כדי להתחיל בהורדה באופן אוטומטי.&lt;br/&gt; &lt;br/&gt; טיפ: ניתן להוריד ולהסיר מילונים ב&lt;b&gt;שפה וקלט&lt;/b&gt; בתפריט &lt;b&gt;הגדרות&lt;/b&gt; של המכשיר הנייד שלך."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"הורד עכשיו (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"הורד באמצעות Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"יש מילון זמין עבור <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"לחץ כדי לעיין ולהוריד"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"מוריד: הצעות ב<xliff:g id="LANGUAGE">%1$s</xliff:g> יהיו מוכנות בקרוב."</string>
 </resources>
