--- a/java/res/values-ca/strings.xml
+++ b/java/res/values-ca/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Teclat d\'Android (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Opcions d\'entrada"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Recerca d\'ordres de reg."</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Corrector ortogràfic d\'Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Cerca noms de contactes"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"El corrector ortogràfic utilitza entrades de la llista de cont."</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Vibra en prémer tecles"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Entr. veu desactiv."</string>
     <string name="configure_input_method" msgid="373356270290742459">"Configura mètodes d\'entrada"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Idiomes d\'entrada"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Envia comentaris"</string>
     <string name="select_language" msgid="3693815588777926848">"Idiomes d\'entrada"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Torna a tocar per desar"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Diccionari disponible"</string>
@@ -170,36 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Predeterminat"</string>
     <string name="language_settings" msgid="1671153053201809031">"Idioma i introducció"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Selecció de mètodes d\'introducció"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Proveïdor de diccionaris"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Proveïdor de diccionaris"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Servei de diccionari"</string>
-    <string name="download_description" msgid="3274861514695032954">"Informació d\'actualització del diccionari"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Diccionaris complementaris"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Diccionari disponible"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Configuració dels diccionaris"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Diccionaris de l\'usuari"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Diccionari de l\'usuari"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Diccionari disponible"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"S\'està baixant"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Instal·lat"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Instal·lat, desactivat"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"S\'ha produït un problema en connectar al servei de diccionari"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"No hi ha cap diccionari disponible."</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Actualitza"</string>
-    <string name="last_update" msgid="3101549719827600346">"Última actualització"</string>
-    <string name="message_updating" msgid="820186276704134720">"S\'està comprovant si hi ha actualitzacions"</string>
-    <string name="message_loading" msgid="8611339149825047446">"S\'està carregant..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Diccionari principal"</string>
-    <string name="cancel" msgid="5586531736609183304">"Cancel·la"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Instal·la"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Cancel·la la baixada"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Desactiva"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Activa"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Suprimeix"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"L\'idioma seleccionat al teu dispositiu mòbil té un diccionari disponible.&lt;br/&gt; Et recomanem que &lt;b&gt;baixis&lt;/b&gt; el diccionari de <xliff:g id="LANGUAGE">%1$s</xliff:g> per millorar la teva experiència d\'escriptura.&lt;br/&gt; &lt;br/&gt; La baixada pot trigar un parell de minuts mitjançant 3G. És possible que s\'apliquin càrrecs si no tens un &lt;b&gt;pla de dades il·limitat&lt;/b&gt;.&lt;br/&gt; Si no estàs segur de quin pla de dades tens, et recomanem que cerquis una connexió Wi-Fi per començar la baixada automàticament.&lt;br/&gt; &lt;br/&gt; Consell: Pots baixar i eliminar diccionaris si vas a la secció &lt;b&gt;Idioma i entrada&lt;/b&gt; del menú &lt;b&gt;Configuració&lt;/b&gt; del dispositiu mòbil."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"Baixa ara (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"Baixa mitjançant Wi-Fi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Hi ha un diccionari disponible per a l\'idioma: <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Prem per opinar i per baixar"</string>
+    <string name="app_name" msgid="6320102637491234792">"Proveïdor de diccionaris"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Proveïdor de diccionaris"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Servei de diccionari"</string>
+    <string name="download_description" msgid="6014835283119198591">"Informació d\'actualització del diccionari"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Diccionaris complementaris"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Diccionari disponible"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Configuració dels diccionaris"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Diccionaris de l\'usuari"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Diccionari de l\'usuari"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Diccionari disponible"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"S\'està baixant"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Instal·lat"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Instal·lat, desactivat"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Error en connectar amb el diccionari"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Cap diccion. dispon."</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Actualitza"</string>
+    <string name="last_update" msgid="730467549913588780">"Última actualització"</string>
+    <string name="message_updating" msgid="4457761393932375219">"S\'està comprovant si hi ha actualitzacions"</string>
+    <string name="message_loading" msgid="8689096636874758814">"S\'està carregant..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Diccionari principal"</string>
+    <string name="cancel" msgid="6830980399865683324">"Cancel·la"</string>
+    <string name="install_dict" msgid="180852772562189365">"Instal·la"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Cancel·la"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Suprimeix"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Hi ha un diccionari disponible per a l\'idioma seleccionat al teu dispositiu mòbil.&lt;br/&gt; Et recomanem que &lt;b&gt;baixis&lt;/b&gt; el diccionari de <xliff:g id="LANGUAGE">%1$s</xliff:g> per millorar la teva experiència d\'escriptura.&lt;br/&gt; &lt;br/&gt; La baixada pot trigar un parell de minuts en xarxes 3G. Si no tens un &lt;b&gt;pla de dades il·limitat&lt;/b&gt;.&lt;br/&amp;gt, és possible que s\'apliquin càrrecs. Si no estàs segur de les característiques del teu pla de dades, et recomanem que cerquis una connexió Wi-Fi per iniciar la baixada automàticament.&lt;br/&gt; &lt;br/&gt; Consell: Pots baixar i suprimir diccionaris a la secció &lt;b&gt;Idioma i entrada de text&lt;/b&gt; del menú &lt;b&gt;Configuració&lt;/b&gt; del dispositiu mòbil."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Baixa ara (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Baixa mitjançant Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Hi ha un diccionari disponible per a l\'idioma: <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Prem per revisar-lo i per baixar-lo"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Baixada: els suggeriments per a <xliff:g id="LANGUAGE">%1$s</xliff:g> estaran disponibles ben aviat."</string>
 </resources>
