--- a/java/res/values-da/strings.xml
+++ b/java/res/values-da/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Android-tastatur (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Indstillinger for input"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Forskningslogkommandoer"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Android-stavekontrol (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Slå kontaktnavne op"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"Stavekontrollen bruger poster fra listen over kontaktpersoner"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Vibration ved tastetryk"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Stemmeinput deaktiveret"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Konfigurer inputmetoder"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Inputsprog"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Send feedback"</string>
     <string name="select_language" msgid="3693815588777926848">"Inputsprog"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Tryk igen for at gemme"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Ordbog er tilgængelig"</string>
@@ -170,36 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Standard"</string>
     <string name="language_settings" msgid="1671153053201809031">"Sprog og input"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Vælg inputmetode"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Dictionary Provider"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Dictionary Provider"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Ordbogstjeneste"</string>
-    <string name="download_description" msgid="3274861514695032954">"Opdateringsoplysninger for ordbøger"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Tillægsordbøger"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Der er en tilgængelig ordbog"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Indstillinger for ordbøger"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Brugerordbøger"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Brugerordbog"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Ordbog er tilgængelig"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Downloader i øjeblikket"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Installeret"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Installeret, deaktiveret"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Uden ordbogstjeneste"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Ingen tilg. ordbøger"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Opdater"</string>
-    <string name="last_update" msgid="3101549719827600346">"Sidst opdateret"</string>
-    <string name="message_updating" msgid="820186276704134720">"Søger efter opdateringer"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Indlæser..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Hovedordbog"</string>
-    <string name="cancel" msgid="5586531736609183304">"Annuller"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Installer"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Annuller download"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Deaktiver"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Aktivér"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Slet"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"Det valgte sprog på din mobilenhed har en tilgængelig ordbog.&lt;br/&gt; Vi anbefaler, at du  &lt;b&gt;downloader&lt;/b&gt; <xliff:g id="LANGUAGE">%1$s</xliff:g>-ordbogen for at forbedre din skriveoplevelse.&lt;br/&gt; &lt;br/&gt; Downloaden kan tage 1-2 minutter via 3G. Der bliver muligvis opkrævet afgifter, hvis du ikke har et &lt;b&gt;ubegrænset dataabonnement&lt;/b&gt;.&lt;br/&gt;. Hvis du ikke er sikker på, hvilket dataabonnemt du har, anbefaler vi, at du finder en Wi-Fi-forbindelse for at starte automatisk download.&lt;br/&gt; &lt;br/&gt;Tip: Du kan downloade og fjerne ordbøger ved at gå til &lt;b&gt;Sprog og input &lt;/b&gt; i menuen &lt;b&gt;Indstillinger&lt;/b&gt; på din mobilenhed."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"Download nu (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"Download via Wi-Fi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Der er en tilgængelig ordbog for <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Tryk for at gennemgå og downloade"</string>
+    <string name="app_name" msgid="6320102637491234792">"Dictionary Provider"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Dictionary Provider"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Ordbogstjeneste"</string>
+    <string name="download_description" msgid="6014835283119198591">"Opdateringsoplysninger for ordbøger"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Tillægsordbøger"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Ordbog er tilgængelig"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Indstillinger for ordbøger"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Brugerordbøger"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Brugerordbog"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Ordbog er tilgængelig"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Downloader i øjeblikket"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Installeret"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Installeret, deaktiveret"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Ingen ordbogstjeneste"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Ingen tilg. ordbøger"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Opdater"</string>
+    <string name="last_update" msgid="730467549913588780">"Sidst opdateret"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Søger efter opdateringer"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Indlæser..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Hovedordbog"</string>
+    <string name="cancel" msgid="6830980399865683324">"Annuller"</string>
+    <string name="install_dict" msgid="180852772562189365">"Installer"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Annuller"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Slet"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Det valgte sprog på din mobilenhed har en tilgængelig ordbog.&lt;br/&gt; Vi anbefaler, at du &lt;b&gt;downloader&lt;/b&gt; <xliff:g id="LANGUAGE">%1$s</xliff:g>-ordbogen for at forbedre din skriveoplevelse.&lt;br/&gt; &lt;br/&gt; Downloaden kan tage 1-2 minutter via 3G. Der bliver muligvis opkrævet et gebyr, hvis du ikke har et &lt;b&gt;ubegrænset dataabonnement&lt;/b&gt;.&lt;br/&gt;. Hvis du ikke er sikker på, hvilket dataabonnement du har, anbefaler vi, at du finder en Wi-Fi-forbindelse for at starte automatisk download.&lt;br/&gt; &lt;br/&gt;Tip! Du kan downloade og fjerne ordbøger ved at gå til &lt;b&gt;Sprog og input &lt;/b&gt; i menuen &lt;b&gt;Indstillinger&lt;/b&gt; på din mobilenhed."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Download nu (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Download via Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Der er en tilgængelig ordbog for <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Tryk for at gennemgå og downloade"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Downloader: Der vil snart være forslag klar på <xliff:g id="LANGUAGE">%1$s</xliff:g>."</string>
 </resources>
