--- a/java/res/values-el/strings.xml
+++ b/java/res/values-el/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Πληκτρολόγιο Android (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Επιλογές εισόδου"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Έρευνα εντολών καταγραφής"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Ορθογραφικός έλεγχος Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Αναζήτηση ονομάτων επαφών"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"Ο ορθογρ. έλεγχος χρησιμοπ. καταχωρίσεις από τη λίστα επαφών σας"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Δόνηση κατά το πάτημα πλήκτρων"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Απεν. φωνητ. είσοδος"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Διαμόρφωση μεθόδων εισαγωγής"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Γλώσσες εισόδου"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Αποστολή σχολίων"</string>
     <string name="select_language" msgid="3693815588777926848">"Γλώσσες εισόδου"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Αγγίξτε ξανά για αποθήκευση"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Λεξικό διαθέσιμο"</string>
@@ -170,39 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Προεπιλογή"</string>
     <string name="language_settings" msgid="1671153053201809031">"Γλώσσα και εισαγωγή"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Επιλογή μεθόδου εισαγωγής"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Παροχέας λεξικού"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Παροχέας λεξικού"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Υπηρεσία λεξικού"</string>
-    <string name="download_description" msgid="3274861514695032954">"Ενημέρωση πληροφοριών λεξικού"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Πρόσθετα λεξικά"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Διαθέσιμο λεξικό"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Ρυθμίσεις για λεξικά"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Λεξικά χρήστη"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Λεξικό χρήστη"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Διαθέσιμο λεξικό"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Λήψη αυτήν τη στιγμή"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Εγκατεστημένο"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Εγκαταστάθηκε, απενεργοποιήθηκε"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Πρόβλ.σύνδ.στο λεξ."</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Δεν υπάρχουν διαθέσιμα λεξικά"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Ανανέωση"</string>
-    <string name="last_update" msgid="3101549719827600346">"Τελευταία ενημέρωση"</string>
-    <string name="message_updating" msgid="820186276704134720">"Έλεγχος για ενημερώσεις"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Φόρτωση..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Κύριο λεξικό"</string>
-    <string name="cancel" msgid="5586531736609183304">"Ακύρωση"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Εγκατάσταση"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Ακύρωση λήψης"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Απενεργοποίηση"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Ενεργοποίηση"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Διαγραφή"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Υπάρχει διαθέσιμο λεξικό για τα <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Πατήστε για έλεγχο και λήψη"</string>
+    <string name="app_name" msgid="6320102637491234792">"Παροχέας λεξικού"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Παροχέας λεξικού"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Υπηρεσία λεξικού"</string>
+    <string name="download_description" msgid="6014835283119198591">"Ενημέρωση πληροφοριών λεξικού"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Πρόσθετα λεξικά"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Διαθέσιμο λεξικό"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Ρυθμίσεις για λεξικά"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Λεξικά χρήστη"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Λεξικό χρήστη"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Διαθέσιμο λεξικό"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Λήψη αυτήν τη στιγμή"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Εγκαταστάθηκε"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Εγκαταστάθηκε, απενεργοποιήθηκε"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Πρόβλ. σύνδ. στο λεξικό."</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Δεν υπάρχουν λεξικά"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Ανανέωση"</string>
+    <string name="last_update" msgid="730467549913588780">"Τελευταία ενημέρωση"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Έλεγχος για ενημερώσεις"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Φόρτωση…"</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Κύριο λεξικό"</string>
+    <string name="cancel" msgid="6830980399865683324">"Ακύρωση"</string>
+    <string name="install_dict" msgid="180852772562189365">"Εγκατάσταση"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Ακύρωση"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Διαγραφή"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Η επιλ. γλώσσα στην κιν. συσκευή σας διαθέτει λεξικό.&lt;br/&gt; Προτείνουμε να &lt;b&gt;κάνετε λήψη&lt;/b&gt; του λεξικού <xliff:g id="LANGUAGE">%1$s</xliff:g> για να βελτ. την πληκτρολόγηση.&lt;br/&gt; &lt;br/&gt; Για τη λήψη μπορεί να χρειαστούν 1 ή 2 λεπτά μέσω 3G. Ίσως ισχύουν χρεώσεις αν δεν έχετε &lt;b&gt;πρόγρ. απερ. δεδομ.&lt;/b&gt;.&lt;br/&gt; Αν δεν γνωρίζετε ποιο πρόγ. δεδ. έχετε, προτείνουμε να βρείτε μια σύνδ. Wi-Fi για να ξεκιν. αυτόμ. η λήψη.&lt;br/&gt; &lt;br/&gt; Συμβουλή: Μπορείτε να λάβετε και να καταργ. λεξικά, από την περιοχή &lt;b&gt;Γλώσσα και εισαγωγή&lt;/b&gt;, στο μενού &lt;b&gt;Ρυθμίσεις&lt;/b&gt; της κιν. συσκ."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Άμεση λήψη (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Λήψη μέσω Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Υπάρχει διαθέσιμο λεξικό για τα <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Πατήστε για έλεγχο και λήψη"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Λήψη: Οι προτάσεις για τα <xliff:g id="LANGUAGE">%1$s</xliff:g> θα είναι έτοιμες σύντομα."</string>
 </resources>
