--- a/java/res/values-fa/strings.xml
+++ b/java/res/values-fa/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"صفحه‌کلید (Android (AOSP"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"گزینه‌های ورودی"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"فرمان‌های گزارش‌گیری پژوهش"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"غلط‌گیر املای Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"جستجوی نام مخاطبین"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"غلط‌گیر املا از ورودی‌های لیست مخاطبین شما استفاده می‌کند"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"لرزش با فشار کلید"</string>
@@ -132,6 +138,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"ورودی صدا غیرفعال است"</string>
     <string name="configure_input_method" msgid="373356270290742459">"پیکربندی روش‌های ورودی"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"زبان‌های ورودی"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"ارسال بازخورد"</string>
     <string name="select_language" msgid="3693815588777926848">"زبان‌های ورودی"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"برای ذخیره دوباره لمس کنید"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"دیکشنری موجود است"</string>
@@ -174,39 +181,34 @@
     <string name="button_default" msgid="3988017840431881491">"پیش‌فرض"</string>
     <string name="language_settings" msgid="1671153053201809031">"زبان و ورودی"</string>
     <string name="select_input_method" msgid="4301602374609275003">"انتخاب روش ورودی"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"ارائه‌دهنده فرهنگ لغت"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"ارائه دهنده فرهنگ لغت"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"سرویس فرهنگ لغت"</string>
-    <string name="download_description" msgid="3274861514695032954">"اطلاعات به‌روزرسانی فرهنگ لغت"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"فرهنگ‌های لغت افزودنی"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"فرهنگ لغت در دسترس"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"تنظیمات برای فرهنگ‌ لغت‌ها"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"فرهنگ‌های لغت کاربر"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"فرهنگ‌ لغت کاربر"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"فرهنگ لغت موجود است"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"موارد در حال دانلود کنونی"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"نصب شد"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"نصب شد، غیرفعال شد"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"مشکل اتصال به سرویس فرهنگ لغت"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"هیچ فرهنگ لغتی موجود نیست"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"بازخوانی"</string>
-    <string name="last_update" msgid="3101549719827600346">"تاریخ آخرین به‌روزرسانی"</string>
-    <string name="message_updating" msgid="820186276704134720">"درحال بررسی به‌روزرسانی‌ها"</string>
-    <string name="message_loading" msgid="8611339149825047446">"در حال بارگیری..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"فرهنگ‌ لغت اصلی"</string>
-    <string name="cancel" msgid="5586531736609183304">"لغو"</string>
-    <string name="install_dict" msgid="5525005524697607865">"نصب"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"لغو دانلود"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"غیرفعال کردن"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"فعال کردن"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"حذف"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"یک فرهنگ لغت برای <xliff:g id="LANGUAGE">%1$s</xliff:g> در دسترس است"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"برای مرور و دانلود فشار دهید"</string>
+    <string name="app_name" msgid="6320102637491234792">"ارائه‌دهنده فرهنگ لغت"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"ارائه‌دهنده فرهنگ لغت"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"سرویس فرهنگ لغت"</string>
+    <string name="download_description" msgid="6014835283119198591">"اطلاعات به‌روزرسانی فرهنگ لغت"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"فرهنگ‌ لغت‌های افزودنی"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"فرهنگ لغت موجود است"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"تنظیمات برای فرهنگ‌ لغت‌ها"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"فرهنگ‌های لغت کاربر"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"فرهنگ‌ لغت کاربر"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"فرهنگ لغت موجود است"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"موارد در حال دانلود فعلی"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"نصب شده"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"نصب شد، غیرفعال شد"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"مشکل اتصال به سرویس فرهنگ لغت"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"هیچ فرهنگ لغتی موجود نیست"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"بازخوانی"</string>
+    <string name="last_update" msgid="730467549913588780">"آخرین به‌روزرسانی"</string>
+    <string name="message_updating" msgid="4457761393932375219">"در حال بررسی به‌روزرسانی‌ها"</string>
+    <string name="message_loading" msgid="8689096636874758814">"در حال بارگیری…"</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"فرهنگ‌ لغت اصلی"</string>
+    <string name="cancel" msgid="6830980399865683324">"لغو"</string>
+    <string name="install_dict" msgid="180852772562189365">"نصب"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"لغو"</string>
+    <string name="delete_dict" msgid="756853268088330054">"حذف"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"برای زبان انتخاب شده در دستگاه همراه شما فرهنگ لغتی موجود است.&lt;br/&gt; توصیه می‌کنیم فرهنگ لغت <xliff:g id="LANGUAGE">%1$s</xliff:g> را &lt;b&gt;دانلود کنید&lt;/b&gt; تا بهتر تایپ کنید.&lt;br/&gt; &lt;br/&gt; دانلود از طریق 3G ممکن است چند لحظه طول بکشد. اگر &lt;b&gt;طرح داده نامحدود&lt;/b&gt; نداشته باشید ممکن است برایتان هزینه داشته باشد.&lt;br/&gt; اگر مطمئن نیستید طرح داده شما چیست٬ توصیه می‌کنیم یک اتصال Wi-Fi پیدا کنید تا دانلود بطور خودکار شروع شود.&lt;br/&gt; &lt;br/&gt; نکته: می‌توانید فرهنگ لغت را با رفتن به منوی &lt;b&gt;زبان و ورودی&lt;/b&gt; در &lt;b&gt;تنظیمات&lt;/b&gt; در دستگاه همراه خود دانلود و حذف کنید."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"هم‌اکنون بارگیری شود (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> مگابایت)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"دانلود ازطریق Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"یک فرهنگ لغت برای <xliff:g id="LANGUAGE">%1$s</xliff:g> موجود است"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"برای مرور و دانلود فشار دهید"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"دانلود لغات پیشنهادی برای <xliff:g id="LANGUAGE">%1$s</xliff:g> به زودی شروع می‌شود."</string>
 </resources>
