--- a/java/res/values-hi/strings.xml
+++ b/java/res/values-hi/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Android कीबोर्ड (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"इनपुट विकल्‍प"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"लॉग आदेशों का शोध करें"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Android वर्तनी परीक्षक (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"संपर्क नामों को खोजें"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"वर्तनी परीक्षक आपकी संपर्क सूची की प्रविष्टियों का उपयोग करता है"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"कुंजी दबाने पर कंपन करता है"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"ध्‍वनि इनपुट अक्षम है"</string>
     <string name="configure_input_method" msgid="373356270290742459">"इनपुट पद्धति कॉन्‍फ़िगर करें"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"इनपुट भाषा"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"फ़ीडबैक भेजें"</string>
     <string name="select_language" msgid="3693815588777926848">"इनपुट भाषाएं"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"सहेजने के लिए पुन: स्‍पर्श करें"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"शब्‍दकोश उपलब्‍ध है"</string>
@@ -170,39 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"डिफ़ॉल्ट"</string>
     <string name="language_settings" msgid="1671153053201809031">"भाषा और इनपुट"</string>
     <string name="select_input_method" msgid="4301602374609275003">"इनपुट पद्धति चुनें"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"डिक्‍शनरी प्रदाता"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"डिक्‍शनरी प्रदाता"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"डिक्‍शनरी सेवा"</string>
-    <string name="download_description" msgid="3274861514695032954">"डिक्‍शनरी अपडेट जानकारी"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"एड-ऑन डिक्शनरी"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"डिक्‍शनरी उपलब्‍ध"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"डिक्‍शनरी के लिए सेटिंग"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"उपयोगकर्ता डिक्शनरी"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"उपयोगकर्ता डिक्शनरी"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"डिक्शनरी उपलब्‍ध"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"वर्तमान में डाउनलोड हो रहा है"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"इंस्‍टॉल है"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"इंस्‍टॉल है, अक्षम है"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"डिक्‍श. सेवा से कनेक्‍ट करने में समस्‍या"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"कोई डिक्‍शनरी उपलब्‍ध नहीं"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"रीफ़्रेश करें"</string>
-    <string name="last_update" msgid="3101549719827600346">"अंतिम अपडेट"</string>
-    <string name="message_updating" msgid="820186276704134720">"अपडेट देखे जा रहे हैं"</string>
-    <string name="message_loading" msgid="8611339149825047446">"लोड हो रही है..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"मुख्‍य डिक्‍शनरी"</string>
-    <string name="cancel" msgid="5586531736609183304">"रद्द करें"</string>
-    <string name="install_dict" msgid="5525005524697607865">"इंस्‍टॉल करें"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"डाउनलोड रद्द करें"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"अक्षम करें"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"सक्षम करें"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"हटाएं"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"<xliff:g id="LANGUAGE">%1$s</xliff:g> के लिए डिक्‍शनरी उपलब्‍ध है"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"समीक्षा और डाउनलोड करने के लिए दबाएं"</string>
+    <string name="app_name" msgid="6320102637491234792">"डिक्‍शनरी प्रदाता"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"डिक्‍शनरी प्रदाता"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"डिक्‍शनरी सेवा"</string>
+    <string name="download_description" msgid="6014835283119198591">"डिक्‍शनरी अपडेट जानकारी"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"एड-ऑन डिक्शनरी"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"डिक्शनरी उपलब्‍ध"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"डिक्‍शनरी की सेटिंग"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"उपयोगकर्ता डिक्शनरी"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"उपयोगकर्ता डिक्शनरी"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"डिक्शनरी उपलब्‍ध"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"वर्तमान में डाउनलोड हो रही है"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"इंस्‍टॉल है"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"इंस्‍टॉल है, अक्षम है"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"डिक्शनरी सेवा से कनेक्ट करने में समस्या"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"डिक्‍शनरी अनुपलब्‍ध"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"रीफ़्रेश करें"</string>
+    <string name="last_update" msgid="730467549913588780">"अंतिम अपडेट"</string>
+    <string name="message_updating" msgid="4457761393932375219">"अपडेट देखे जा रहे हैं"</string>
+    <string name="message_loading" msgid="8689096636874758814">"लोड हो रही है..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"मुख्‍य डिक्‍शनरी"</string>
+    <string name="cancel" msgid="6830980399865683324">"रद्द करें"</string>
+    <string name="install_dict" msgid="180852772562189365">"इंस्टॉल करें"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"रद्द करें"</string>
+    <string name="delete_dict" msgid="756853268088330054">"हटाएं"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"आपके मोबाइल उपकरण पर चयनित भाषा में डिक्‍शनरी उपलब्‍ध है.&lt;br/&gt; आपके लेखन अनुभव को बेहतर बनाने के लिए हम <xliff:g id="LANGUAGE">%1$s</xliff:g> डिक्‍शनरी को &lt;b&gt;डाउनलोड करने&lt;/b&gt; की अनुशंसा करते हैं.&lt;br/&gt; &lt;br/&gt; 3G पर डाउनलोड होने में एक या दो मिनट लग सकते हैं. यदि आपके पास &lt;b&gt;असीमित डेटा प्लान&lt;/b&gt; नहीं है, तो शुल्‍क लग सकते हैं.&lt;br/&gt; यदि आप अपने डेटा प्लान के बारे में सुनिश्चित नहीं हैं, तो हम अपने आप डाउनलोड प्रारंभ करने के लिए Wi-Fi कनेक्‍शन ढूंढने की अनुशंसा करते हैं.&lt;br/&gt; &lt;br/&gt; युक्ति: आप अपने मोबाइल उपकरण पर &lt;b&gt;सेटिंग&lt;/b&gt; मेनू में &lt;b&gt;भाषा और इनपुट&lt;/b&gt; पर जाकर डिक्‍शनरी डाउनलोड कर सकते हैं और निकाल सकते हैं."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"अभी डाउनलोड करें (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Wi-Fi से डाउनलोड करें"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"<xliff:g id="LANGUAGE">%1$s</xliff:g> के लिए डिक्‍शनरी उपलब्‍ध है"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"समीक्षा करने और डाउनलोड करने के लिए दबाएं"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"डाउनलोड हो रहा है: <xliff:g id="LANGUAGE">%1$s</xliff:g> के लिए सुझाव जल्दी ही तैयार हो जाएंगे."</string>
 </resources>
