--- a/java/res/values-nl/strings.xml
+++ b/java/res/values-nl/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Android-toetsenbord (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Invoeropties"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Opdrachten in onderzoekslogbestand"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Spellingcontrole van Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Contactnamen opzoeken"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"De spellingcontrole gebruikt items uit uw contactenlijst"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Trillen bij toetsaanslag"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Spraakinvoer is uit"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Invoermethoden configureren"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Invoertalen"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Feedback verzenden"</string>
     <string name="select_language" msgid="3693815588777926848">"Invoertalen"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Raak nogmaals aan om op te slaan"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Woordenboek beschikbaar"</string>
@@ -170,36 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Standaard"</string>
     <string name="language_settings" msgid="1671153053201809031">"Taal en invoer"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Invoermethode selecteren"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Woordenboekleverancier"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Woordenboekleverancier"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Woordenboekservice"</string>
-    <string name="download_description" msgid="3274861514695032954">"Informatie over woordenboekupdate"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Woordenboeken toevoegen"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Woordenboek beschikbaar"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Instellingen voor woordenboeken"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Gebruikerswoordenboeken"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Gebruikerswoordenboek"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Woordenboek beschikbaar"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Wordt gedownload"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Geïnstalleerd"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Geïnstalleerd, uitgeschakeld"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Verbindingsprobleem woordenboekservice"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Geen woordenboeken"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Vernieuwen"</string>
-    <string name="last_update" msgid="3101549719827600346">"Laatst bijgewerkt"</string>
-    <string name="message_updating" msgid="820186276704134720">"Controleren op updates"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Laden..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Algemeen woordenboek"</string>
-    <string name="cancel" msgid="5586531736609183304">"Annuleren"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Installeren"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Download annuleren"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Uitschakelen"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Inschakelen"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Verwijderen"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"Er is een woordenboek beschikbaar voor de geselecteerde taal op uw mobiele apparaat.&lt;br/&gt; We raden u aan het woordenboek voor het <xliff:g id="LANGUAGE">%1$s</xliff:g> te &lt;b&gt;downloaden&lt;/b&gt; om uw typevaardigheid te verbeteren.&lt;br/&gt; &lt;br/&gt; De download kan een of twee minuten duren via 3G. Er kunnen kosten worden berekend als u geen &lt;b&gt;onbeperkt gegevensabonnement&lt;/b&gt; heeft.&lt;br/&gt; Als u niet zeker weet welk gegevensabonnement u heeft, raden we u aan een wifi-verbinding te zoeken om de download automatisch te starten.&lt;br/&gt; &lt;br/&gt; Tip: u kunt woordenboeken downloaden en verwijderen door naar &lt;b&gt;Taal en invoer&lt;/b&gt; in het menu &lt;b&gt;Instellingen&lt;/b&gt; van uw mobiele apparaat te gaan."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"Nu downloaden (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"Downloaden via wifi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Er is een woordenboek beschikbaar voor <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Druk om te controleren en te downloaden"</string>
+    <string name="app_name" msgid="6320102637491234792">"Woordenboekleverancier"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Woordenboekleverancier"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Woordenboekservice"</string>
+    <string name="download_description" msgid="6014835283119198591">"Informatie over woordenboekupdate"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Woordenboeken toevoegen"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Woordenboek beschikbaar"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Instellingen voor woordenboeken"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Gebruikerswoordenboeken"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Gebruikerswoordenboek"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Woordenboek beschikbaar"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Wordt gedownload"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Geïnstalleerd"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Geïnstalleerd, uitgeschakeld"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Verbindingsprobleem woordenboekservice"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Geen woordenboeken"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Vernieuwen"</string>
+    <string name="last_update" msgid="730467549913588780">"Laatst bijgewerkt"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Controleren op updates"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Wordt geladen…"</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Algemeen woordenboek"</string>
+    <string name="cancel" msgid="6830980399865683324">"Annuleren"</string>
+    <string name="install_dict" msgid="180852772562189365">"Installeren"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Annuleren"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Verwijderen"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Er is een woordenboek voor de geselecteerde taal beschikbaar op uw mobiele apparaat.&lt;br/&gt; We raden u aan het woordenboek voor het <xliff:g id="LANGUAGE">%1$s</xliff:g> te &lt;b&gt;downloaden&lt;/b&gt; om uw typvaardigheid te verbeteren.&lt;br/&gt; &lt;br/&gt; De download kan één of twee minuten duren via 3G. Er kunnen kosten worden berekend als u geen &lt;b&gt;onbeperkt gegevensabonnement&lt;/b&gt; heeft.&lt;br/&gt; Als u niet zeker weet welk gegevensabonnement u heeft, raden we u aan een wifi-verbinding te zoeken om de download automatisch te starten.&lt;br/&gt; &lt;br/&gt; Tip: u kunt woordenboeken downloaden en verwijderen via &lt;b&gt;Taal en invoer&lt;/b&gt; in het menu &lt;b&gt;Instellingen&lt;/b&gt; van uw mobiele apparaat."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Nu downloaden (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Downloaden via wifi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Er is een woordenboek beschikbaar voor het <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Druk om te controleren en te downloaden"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Downloaden: suggesties voor het <xliff:g id="LANGUAGE">%1$s</xliff:g> zijn straks beschikbaar."</string>
 </resources>
