--- a/java/res/values-pl/strings.xml
+++ b/java/res/values-pl/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Klawiatura Androida (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Opcje wprowadzania"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Polecenia dziennika badań"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Sprawdzanie pisowni na Androidzie (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Przeszukaj kontakty"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"Sprawdzanie pisowni bierze pod uwagę wpisy z listy kontaktów."</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Wibracja przy naciśnięciu"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Rozpoznawanie mowy jest wyłączone"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Konfiguruj metody wprowadzania"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Języki wprowadzania"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Prześlij opinię"</string>
     <string name="select_language" msgid="3693815588777926848">"Języki wprowadzania"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Dotknij ponownie, aby zapisać"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Słownik dostępny"</string>
@@ -170,39 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Domyślne"</string>
     <string name="language_settings" msgid="1671153053201809031">"Język, klawiatura, głos"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Wybierz metodę wprowadzania"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Dostawca słownika"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Dostawca słownika"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Usługa słownika"</string>
-    <string name="download_description" msgid="3274861514695032954">"Informacje o aktualizacji słownika"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Słowniki dodatkowe"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Dostępny słownik"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Ustawienia słowników"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Słowniki użytkownika"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Słownik użytkownika"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Słownik jest dostępny"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Aktualnie pobierany"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Zainstalowany"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Zainstalowany, wyłączony"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Problem z połączeniem z usługą słownika"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Brak słowników"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Odśwież"</string>
-    <string name="last_update" msgid="3101549719827600346">"Ostatnia aktualizacja"</string>
-    <string name="message_updating" msgid="820186276704134720">"Sprawdzanie dostępności aktualizacji"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Wczytywanie..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Słownik główny"</string>
-    <string name="cancel" msgid="5586531736609183304">"Anuluj"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Zainstaluj"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Anuluj pobieranie"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Wyłącz"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Włącz"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Usuń"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Dla języka: <xliff:g id="LANGUAGE">%1$s</xliff:g> jest dostępny słownik"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Naciśnij, aby sprawdzić i pobrać"</string>
+    <string name="app_name" msgid="6320102637491234792">"Dostawca słownika"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Dostawca słownika"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Usługa słownika"</string>
+    <string name="download_description" msgid="6014835283119198591">"Informacje o aktualizacji słownika"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Słowniki dodatkowe"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Słownik dostępny"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Ustawienia słowników"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Słowniki użytkownika"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Słownik użytkownika"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Słownik dostępny"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Aktualnie pobierany"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Zainstalowany"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Zainstalowany, wyłączony"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Problem z połączeniem z usługą słownika"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Brak słowników"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Odśwież"</string>
+    <string name="last_update" msgid="730467549913588780">"Ostatnia aktualizacja"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Sprawdzanie dostępności aktualizacji"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Wczytuję..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Słownik główny"</string>
+    <string name="cancel" msgid="6830980399865683324">"Anuluj"</string>
+    <string name="install_dict" msgid="180852772562189365">"Zainstaluj"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Anuluj"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Usuń"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Dla języka, którego używasz na swoim urządzeniu przenośnym, jest dostępny słownik.&lt;br/&gt; Warto &lt;b&gt;pobrać&lt;/b&gt; ten słownik <xliff:g id="LANGUAGE">%1$s</xliff:g>, by ułatwić sobie pisanie.&lt;br/&gt; &lt;br/&gt; Pobieranie trwa do dwóch minut (przez 3G). Jeśli nie masz &lt;b&gt;abonamentu z nieograniczoną transmisją danych&lt;/b&gt;, operator może naliczyć opłatę.&lt;br/&gt; Jeśli nie wiesz, jaki masz abonament, połącz się z Wi-Fi, by automatycznie rozpocząć pobieranie.&lt;br/&gt; &lt;br/&gt; Wskazówka: słowniki możesz pobierać i usuwać na urządzeniu w sekcji &lt;b&gt;Język, klawiatura, głos&lt;/b&gt; w menu &lt;b&gt;Ustawienia&lt;/b&gt;."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Pobierz teraz (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Pobierz przez Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Dostępny jest słownik <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Naciśnij, by sprawdzić i pobrać"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Pobieranie – wkrótce będą dostępne sugestie w tym języku: <xliff:g id="LANGUAGE">%1$s</xliff:g>."</string>
 </resources>
