--- a/java/res/values-sv/strings.xml
+++ b/java/res/values-sv/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Androids tangentbord (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Inmatningsalternativ"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Loggkommandon"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Stavningskontroll i Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Sök namn på kontakter"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"I stavningskontrollen används poster från kontaktlistan"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Vibrera vid tangenttryck"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Röstinmatning inaktiv"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Konfigurera inmatningsmetoder"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Inmatningsspråk"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Skicka feedback"</string>
     <string name="select_language" msgid="3693815588777926848">"Inmatningsspråk"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Spara genom att trycka igen"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"En ordlista är tillgänglig"</string>
@@ -170,36 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Standard"</string>
     <string name="language_settings" msgid="1671153053201809031">"Språk &amp; inmatning"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Välj inmatningsmetod"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Dictionary Provider"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Dictionary Provider"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Ordbokstjänst"</string>
-    <string name="download_description" msgid="3274861514695032954">"Uppdateringsinformation för ordlista"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Tilläggsordlistor"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"En ordlista är tillgänglig"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Inställningar för ordlistor"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Egna ordlistor"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Egen ordlista"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"En ordlista är tillgänglig"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Hämtas för närvarande"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Installerad"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Installerad, inaktiverad"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Problem med att ansluta till ordlistetjänsten"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Det finns inga ordböcker"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Uppdatera"</string>
-    <string name="last_update" msgid="3101549719827600346">"Senast uppdaterad"</string>
-    <string name="message_updating" msgid="820186276704134720">"Söker efter uppdateringar"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Läser in ..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Huvudordlistan"</string>
-    <string name="cancel" msgid="5586531736609183304">"Avbryt"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Installera"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Avbryt hämtning"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Inaktivera"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Aktivera"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Ta bort"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"Det finns en ordlista för språket du har valt i enheten.&lt;br/&gt; Vi rekommenderar att du &lt;b&gt;hämtar&lt;/b&gt; den <xliff:g id="LANGUAGE">%1$s</xliff:g> ordlistan.&lt;br/&gt; &lt;br/&gt; Det kan ta någon minut att hämta den över 3G. Avgifter kan tillkomma om du inte har ett abonnemang med &lt;b&gt;obegränsad datatrafik&lt;/b&gt;.&lt;br/&gt; Om du är osäker på ditt abonnemang rekommenderar vi att du ansluter till ett Wi-Fi-nätverk och hämtar ordlistan automatiskt.&lt;br/&gt; &lt;br/&gt; Tips! Du kan hämta och ta bort ordlistor under &lt;b&gt;Språk och inmatning&lt;/b&gt; i menyn &lt;b&gt;Inställningar&lt;/b&gt; på enheten."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"Hämta nu (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"Hämta över Wi-Fi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"En ordlista är tillgänglig för <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Tryck om du vill granska och hämta"</string>
+    <string name="app_name" msgid="6320102637491234792">"Dictionary Provider"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Dictionary Provider"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Ordlistetjänst"</string>
+    <string name="download_description" msgid="6014835283119198591">"Uppdateringsinformation för ordlista"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Tilläggsordlistor"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"En ordlista är tillgänglig"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Inställningar för ordlistor"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Egna ordlistor"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Egen ordlista"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"En ordlista är tillgänglig"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Hämtar för närvarande"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Installerad"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Installerad, inaktiverad"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Problem med att ansluta till ordlistetjänsten"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Inga ordlistor finns"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Uppdatera"</string>
+    <string name="last_update" msgid="730467549913588780">"Informationen uppdaterades senast"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Söker efter uppdateringar"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Läser in ..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Huvudordlista"</string>
+    <string name="cancel" msgid="6830980399865683324">"Avbryt"</string>
+    <string name="install_dict" msgid="180852772562189365">"Installera"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Avbryt"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Ta bort"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Det finns en ordlista för språket du har valt i din mobila enhet.&lt;br/&gt; Vi rekommenderar att du &lt;b&gt;hämtar&lt;/b&gt; ordlistan för <xliff:g id="LANGUAGE">%1$s</xliff:g> så att det blir enklare att skriva.&lt;br/&gt; &lt;br/&gt; Det kan ta någon minut att hämta den via 3G. Avgifter kan tillkomma om du inte har ett abonnemang med &lt;b&gt;obegränsad datatrafik&lt;/b&gt;.&lt;br/&gt; Om du är osäker på vilket abonnemang du har rekommenderar vi att du ansluter till ett Wi-Fi-nätverk och hämtar ordlistan automatiskt.&lt;br/&gt; &lt;br/&gt; Tips! Du kan hämta och ta bort ordlistor under &lt;b&gt;Språk och inmatning&lt;/b&gt; i menyn &lt;b&gt;Inställningar&lt;/b&gt; på den mobila enheten."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Hämta nu (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Hämta via Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"En ordlista är tillgänglig för <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Tryck om du vill granska och hämta"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Hämtar: förslag för <xliff:g id="LANGUAGE">%1$s</xliff:g> är snart klara."</string>
 </resources>
