--- a/java/res/values-th/strings.xml
+++ b/java/res/values-th/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Android keyboard (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"ตัวเลือกการป้อนข้อมูล"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"คำสั่งบันทึกการวิจัย"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"แอนดรอยด์ตรวจสอบการสะกด (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"ค้นหารายชื่อติดต่อ"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"เครื่องมือตรวจการสะกดใช้รายการจากรายชื่อติดต่อของคุณ"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"สั่นเมื่อกดปุ่ม"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"ปิดใช้งานป้อนข้อมูลด้วยเสียง"</string>
     <string name="configure_input_method" msgid="373356270290742459">"กำหนดค่าวิธีการป้อนข้อมูล"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"ภาษาในการป้อนข้อมูล"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"ส่งข้อเสนอแนะ"</string>
     <string name="select_language" msgid="3693815588777926848">"ภาษาสำหรับการป้อนข้อมูล"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"แตะอีกครั้งเพื่อบัน​​ทึก"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"มีพจนานุกรมให้ใช้งาน"</string>
@@ -170,39 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"ค่าเริ่มต้น"</string>
     <string name="language_settings" msgid="1671153053201809031">"ภาษาและการป้อนข้อมูล"</string>
     <string name="select_input_method" msgid="4301602374609275003">"เลือกวิธีการป้อนข้อมูล"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"ผู้ให้บริการพจนานุกรม"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"ผู้ให้บริการพจนานุกรม"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"บริการพจนานุกรม"</string>
-    <string name="download_description" msgid="3274861514695032954">"ข้อมูลอัปเดตสำหรับพจนานุกรม"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"พจนานุกรม Add-On"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"มีพจนานุกรมให้ใช้งาน"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"การตั้งค่าสำหรับพจนานุกรม"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"พจนานุกรมผู้ใช้"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"พจนานุกรมผู้ใช้"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"มีพจนานุกรมให้ใช้งาน"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"กำลังดาวน์โหลดอยู่"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"ติดตั้งแล้ว"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"ติดตั้งแล้วแต่ปิดใช้งาน"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"พบปัญหาขณะเชื่อมต่อ"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"ไม่มีพจนานุกรม"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"รีเฟรช"</string>
-    <string name="last_update" msgid="3101549719827600346">"ปรับปรุงล่าสุดเมื่อ"</string>
-    <string name="message_updating" msgid="820186276704134720">"กำลังตรวจสอบการอัปเดต..."</string>
-    <string name="message_loading" msgid="8611339149825047446">"กำลังโหลด..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"พจนานุกรมหลัก"</string>
-    <string name="cancel" msgid="5586531736609183304">"ยกเลิก"</string>
-    <string name="install_dict" msgid="5525005524697607865">"ติดตั้ง"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"ยกเลิกการดาวน์โหลด"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"ปิดใช้งาน"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"เปิดใช้งาน"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"ลบ"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"มีพจนานุกรมให้ใช้งานในภาษา <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"กดเพื่อตรวจสอบและดาวน์โหลด"</string>
+    <string name="app_name" msgid="6320102637491234792">"ผู้ให้บริการพจนานุกรม"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"ผู้ให้บริการพจนานุกรม"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"บริการพจนานุกรม"</string>
+    <string name="download_description" msgid="6014835283119198591">"ข้อมูลอัปเดตสำหรับพจนานุกรม"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"พจนานุกรมส่วนเสริม"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"มีพจนานุกรมให้ใช้งาน"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"การตั้งค่าสำหรับพจนานุกรม"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"พจนานุกรมผู้ใช้"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"พจนานุกรมผู้ใช้"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"มีพจนานุกรมให้ใช้งาน"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"กำลังดาวน์โหลดอยู่"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"ติดตั้งแล้ว"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"ติดตั้งแล้วแต่ปิดใช้งาน"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"พบปัญหาขณะเชื่อมต่อ"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"ไม่มีพจนานุกรม"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"รีเฟรช"</string>
+    <string name="last_update" msgid="730467549913588780">"ปรับปรุงแก้ไขครั้งล่าสุด"</string>
+    <string name="message_updating" msgid="4457761393932375219">"กำลังตรวจสอบการอัปเดต"</string>
+    <string name="message_loading" msgid="8689096636874758814">"กำลังโหลด..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"พจนานุกรมหลัก"</string>
+    <string name="cancel" msgid="6830980399865683324">"ยกเลิก"</string>
+    <string name="install_dict" msgid="180852772562189365">"ติดตั้ง"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"ยกเลิก"</string>
+    <string name="delete_dict" msgid="756853268088330054">"ลบ"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"ภาษาที่คุณเลือกใช้ในอุปกรณ์เคลื่อนที่มีพจนานุกรมที่สามารถใช้ได้&lt;br/&gt; เราขอแนะนำให้คุณ &lt;b&gt;ดาวน์โหลด&lt;/b&gt; พจนานุกรม <xliff:g id="LANGUAGE">%1$s</xliff:g> เพื่อรับประสบการณ์การพิมพ์ที่ดียิ่งขึ้น&lt;br/&gt; &lt;br/&gt;การดาวน์โหลดจะใช้เวลาหนึ่งถึงสองนาทีผ่านทาง 3G ซึ่งอาจมีการเรียกเก็บเงินหากคุณไม่ได้ใช้ &lt;b&gt;แผนบริการข้อมูลแบบไม่จำกัดปริมาณ&lt;/b&gt; &lt;br/&gt;หากคุณไม่แน่ใจว่าคุณใช้แผนบริการข้อมูลแบบใด เราขอแนะนำให้คุณเชื่อมต่อ WiFi เพื่อเริ่มการดาวน์โหลดอัตโนมัติ&lt;br/&gt; &lt;br/&gt;เคล็ดลับ: คุณสามารถดาวน์โหลดและนำพจนานุกรมออกได้โดยไปที่ &lt;b&gt;ภาษาและการป้อนข้อมูล&lt;/b&gt; ในเมนู &lt;b&gt;การตั้งค่า&lt;/b&gt; ในอุปกรณ์เคลื่อนที่ของคุณ"</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"ดาวน์โหลดเลย (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"ดาวน์โหลดผ่าน WiFi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"มีพจนานุกรมให้ใช้งานในภาษา <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"กดเพื่อตรวจสอบและดาวน์โหลด"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"กำลังดาวน์โหลด: คำแนะนำสำหรับ <xliff:g id="LANGUAGE">%1$s</xliff:g> จะพร้อมใช้งานเร็วๆ นี้"</string>
 </resources>
