--- a/java/res/values-tl/strings.xml
+++ b/java/res/values-tl/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Android keyboard (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Mga pagpipilian sa input"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Cmmnd sa Log ng Pnnliksik"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Pang-check ng pagbabaybay ng Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Maghanap pangalan contact"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"Gumagamit pang-check pagbabaybay entry sa iyong listahan contact"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Mag-vibrate sa keypress"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Hindi pinagana ang voice input"</string>
     <string name="configure_input_method" msgid="373356270290742459">"I-configure ang mga pamamaraan ng pag-input"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Mag-input ng mga wika"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Magpadala ng feedback"</string>
     <string name="select_language" msgid="3693815588777926848">"Mga wika ng input"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Pinduting muli upang i-save"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Available ang diksyunaryo"</string>
@@ -170,39 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Default"</string>
     <string name="language_settings" msgid="1671153053201809031">"Wika at input"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Pumili ng pamamaraan ng pag-input"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Provider ng Diksyunaryo"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Provider ng Diksyunaryo"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Serbisyo ng Diksyunaryo"</string>
-    <string name="download_description" msgid="3274861514695032954">"Impormasyon ng pag-update sa diksyunaryo"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Mga diksyunaryo na add-on"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Available ang diksyunaryo"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Mga setting para sa mga diksyunaryo"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Mga diksyunaryo ng user"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Diksyunaryo ng user"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Available ang diksyunaryo"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Kasalukuyang nagda-download"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Naka-install"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Naka-install, hindi pinagana"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Problema sa pagkonekta sa serbisyo ng diksyunaryo"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Walang available na mga diksyunaryo"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"I-refresh"</string>
-    <string name="last_update" msgid="3101549719827600346">"Huling na-update"</string>
-    <string name="message_updating" msgid="820186276704134720">"Tumitingin ng mga update"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Naglo-load..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Pangunahing diksyunaryo"</string>
-    <string name="cancel" msgid="5586531736609183304">"Kanselahin"</string>
-    <string name="install_dict" msgid="5525005524697607865">"I-install"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Kanselahin ang pag-download"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Huwag paganahin"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Paganahin"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Tanggalin"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Available ang isang diksyunaryo para sa <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Pindutin upang suriin at i-download"</string>
+    <string name="app_name" msgid="6320102637491234792">"Provider ng Diksyunaryo"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Provider ng Diksyunaryo"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Serbisyo ng Diksyunaryo"</string>
+    <string name="download_description" msgid="6014835283119198591">"Impormasyon ng update sa diksyunaryo"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Mga add-on na diksyunaryo"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Available ang diksyunaryo"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Mga setting para sa mga diksyunaryo"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Mga diksyunaryo ng user"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Diksyunaryo ng user"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Available ang diksyunaryo"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Kasalukuyang dina-download"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Na-install na"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Naka-install, hindi pinagana"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Di makakonekta sa serbisyong diksyunaryo"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Walang mga diksyunaryo"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"I-refresh"</string>
+    <string name="last_update" msgid="730467549913588780">"Huling na-update"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Tumitingin ng mga update"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Naglo-load..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Pangunahing diksyunaryo"</string>
+    <string name="cancel" msgid="6830980399865683324">"Kanselahin"</string>
+    <string name="install_dict" msgid="180852772562189365">"I-install"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Kanselahin"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Tanggalin"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"May available na diksyunaryo ang piniling wika sa iyong mobile device.&lt;br/&gt; Inirerekomenda namin ang &lt;b&gt;pag-download&lt;/b&gt; sa diksyunaryong <xliff:g id="LANGUAGE">%1$s</xliff:g> upang mapabuti ang iyong karanasan sa pag-type.&lt;br/&gt; &lt;br/&gt; Maaaring umabot ng isa hanggang dalawang minuto ang pag-download gamit ang 3G. Maaaring may malapat na mga pagsingil kung wala kang &lt;b&gt;data plan na walang limitasyon&lt;/b&gt;.&lt;br/&gt; Kung hindi ka sigurado kung aling data plan ang mayroon ka, inirerekomenda naming maghanap ng koneksyon sa Wi-Fi upang awtomatikong simulan ang pag-download.&lt;br/&gt; &lt;br/&gt; Tip: Maaari kang mag-download at mag-alis ng mga diksyunaryo sa pamamagitan ng pagpunta sa &lt;b&gt;Wika at input&lt;/b&gt; sa menu na &lt;b&gt;Mga Setting&lt;/b&gt; ng iyong mobile device."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"I-download ngayon (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"I-download gamit ang Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"May available na diksyunaryo para sa <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Pindutin upang suriin at i-download"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Dina-download: malapit nang maging handa ang mga suhestiyon para sa <xliff:g id="LANGUAGE">%1$s</xliff:g>."</string>
 </resources>
