--- a/java/res/values-uk/strings.xml
+++ b/java/res/values-uk/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Клавіатура Android (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Парам. введення"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Команди журналу дослідж."</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Засіб перевірки орфографії Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Шукати імена контактів"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"Програма перевірки правопису використ. записи зі списку контактів"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Вібр. при натисканні клавіш"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Голос. ввід вимкнено"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Налаштування методів введення"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Мови вводу"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Надіслати відгук"</string>
     <string name="select_language" msgid="3693815588777926848">"Мови введення"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Торкніться знову, щоб зберегти"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Словник доступний"</string>
@@ -170,39 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"За умовчанням"</string>
     <string name="language_settings" msgid="1671153053201809031">"Мова та введення"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Вибрати метод введення"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Постачальник словника"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Постачальник словника"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Послуга словника"</string>
-    <string name="download_description" msgid="3274861514695032954">"Інформація про оновлення словника"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Додаткові словники"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Словник доступний"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Налаштування для словників"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Словники користувача"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Словник користувача"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Словник доступний"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Зараз завантажується"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Установлено"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Установлено, вимкнено"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Нема з’єднання зі словником"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Словники недоступні"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Оновити"</string>
-    <string name="last_update" msgid="3101549719827600346">"Останнє оновлення"</string>
-    <string name="message_updating" msgid="820186276704134720">"Перевірка наявності оновлень"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Завантаження..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Основний словник"</string>
-    <string name="cancel" msgid="5586531736609183304">"Скасувати"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Установити"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Скасувати завантаження"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Вимкнути"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Увімкнути"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Видалити"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Доступний словник для такої мови: <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Натисніть, щоб переглянути та завантажити"</string>
+    <string name="app_name" msgid="6320102637491234792">"Постачальник словника"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Постачальник словника"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Служба словника"</string>
+    <string name="download_description" msgid="6014835283119198591">"Інформація про оновлення словника"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Додаткові словники"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Словник доступний"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Налаштування для словників"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Словники користувача"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Словник користувача"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Словник доступний"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Зараз завантажується"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Установлено"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Установлено, вимкнено"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Нема з’єднання зі службою словника"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Словники недоступні"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Оновити"</string>
+    <string name="last_update" msgid="730467549913588780">"Останнє оновлення"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Перевірка наявності оновлень"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Завантаження…"</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Основний словник"</string>
+    <string name="cancel" msgid="6830980399865683324">"Скасувати"</string>
+    <string name="install_dict" msgid="180852772562189365">"Установити"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Скасувати"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Видалити"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Для вибраної на вашому мобільному пристрої мови доступний словник.&lt;br/&gt; Радимо &lt;b&gt;завантажити&lt;/b&gt; словник для цієї мови (<xliff:g id="LANGUAGE">%1$s</xliff:g>), щоб покращити введення тексту.&lt;br/&gt; &lt;br/&gt; У мережі 3G завантаження триває 1–2 хвилини. Якщо у вас не &lt;b&gt;безлімітний тарифний план Інтернету&lt;/b&gt;, може стягуватися плата.&lt;br/&gt; Якщо ви не впевнені щодо тарифного плану, радимо скористатися з’єднанням Wi-Fi, щоб автоматично почати завантаження.&lt;br/&gt; &lt;br/&gt; Порада: завантажувати та вилучати словники можна в меню &lt;b&gt;Налаштування&lt;/b&gt; в розділі &lt;b&gt;Мова та введення&lt;/b&gt; вашого мобільного пристрою."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Завантажити зараз (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> Mб)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Завантажити через Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Доступний словник для такої мови: <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Натисніть, щоб переглянути та завантажити"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Скоро почнеться завантаження пропозицій для такої мови: <xliff:g id="LANGUAGE">%1$s</xliff:g>."</string>
 </resources>
