--- a/java/res/values-zu/strings.xml
+++ b/java/res/values-zu/strings.xml
@@ -20,10 +20,16 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="aosp_android_keyboard_ime_name" msgid="7877134937939182296">"Ikhibhodi ye-Android (AOSP)"</string>
+    <!-- no translation found for aosp_android_keyboard_ime_name (8250992613616792321) -->
+    <skip />
+    <!-- no translation found for aosp_android_keyboard_ime_settings (423615877174850267) -->
+    <skip />
+    <!-- no translation found for aosp_spell_checker_service_name (511950477199948048) -->
+    <skip />
+    <!-- no translation found for aosp_android_spell_checker_service_settings (2970535894327288421) -->
+    <skip />
     <string name="english_ime_input_options" msgid="3909945612939668554">"Okukhethwa kukho kokungenayo"</string>
     <string name="english_ime_research_log" msgid="8492602295696577851">"Imiyalo yefayela lokungena lokucwaninga"</string>
-    <string name="aosp_spell_checker_service_name" msgid="6985142605330377819">"Isihloli sokupela se-Android (AOSP)"</string>
     <string name="use_contacts_for_spellchecking_option_title" msgid="5374120998125353898">"Bheka amagama woxhumana nabo"</string>
     <string name="use_contacts_for_spellchecking_option_summary" msgid="8754413382543307713">"Isihloli sokupela sisebenzisa okungenayo kusuka kuhlu lalabo oxhumana nabo"</string>
     <string name="vibrate_on_keypress" msgid="5258079494276955460">"Dlidlizelisa ngokucindezela inkinobho"</string>
@@ -128,6 +134,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Okufakwayo ngezwi kuvinjelwe"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Misa izindlela zokufakwayo"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Izilimi zokufakwayo"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Thumela impendulo"</string>
     <string name="select_language" msgid="3693815588777926848">"Izilimi zokufakwayo"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Thinta futhi ukuze ulondoloze"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Isichazamazwi siyatholakala"</string>
@@ -170,39 +177,34 @@
     <string name="button_default" msgid="3988017840431881491">"Okuzenzakalelayo"</string>
     <string name="language_settings" msgid="1671153053201809031">"Ulimi nokokufakwayo"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Khetha indlela yokufaka"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Umhlinzeki Wesichazamazwi"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Umhlinzeki Wesichazamazwi"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Insiza yesichazamazwi"</string>
-    <string name="download_description" msgid="3274861514695032954">"Ulwazi lokubuyekeza isichazamazwi"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Faka izichazamazwi"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Isichazamazwi siyatholakala"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Izilungiselelo zezichazamazwi"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Sebenzisa isichazamazwi"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Isichazamazwi Somsebenzisi"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Isichazamazwi siyatholakala"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Okwamanje iyalayisha"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Kufakiwe"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Kufakiwe, kumisiwe"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Inkinga yokuxhumaniseka esevisini yesichazamazwi"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Azikho izachazimazwi ezikhona"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Vuselela"</string>
-    <string name="last_update" msgid="3101549719827600346">"Igcine ukulungiswa:"</string>
-    <string name="message_updating" msgid="820186276704134720">"Ihlola izibuyekezo..."</string>
-    <string name="message_loading" msgid="8611339149825047446">"Kuyalayisha..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Isichazimazwi sakho ngqangi"</string>
-    <string name="cancel" msgid="5586531736609183304">"Khansela"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Faka"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Khansela ukulayisha"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Yenza kungasebenzi"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Vumela"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Susa"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Isichazamazwi se-<xliff:g id="LANGUAGE">%1$s</xliff:g> siyatholakala"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Cindezela ukuze ubuyekeze bese ulanda"</string>
+    <string name="app_name" msgid="6320102637491234792">"Umhlinzeki wesichazamazwi"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Umhlinzeki wesichazamazwi"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Isevisi yesichazamazwi"</string>
+    <string name="download_description" msgid="6014835283119198591">"Ulwazi lokubuyekeza isichazamazwi"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Izichazamazwi ezingezwayo"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Isichazamazwi siyatholakala"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Izilungiselelo zezichazamazwi"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Izichazamazwi zomsebenzisi"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Isichazamazwi somsebenzisi"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Isichazamazwi siyatholakala"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Okwamanje iyalanda"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Kufakiwe"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Kufakiwe, kukhutshaziwe"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Inkinga yokuxhumanisa kusevisi yesichazamazwi"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Azikho izachazimazwi ezitholakalayo"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Qala kabusha"</string>
+    <string name="last_update" msgid="730467549913588780">"Igcine ukulungiswa"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Ihlola izibuyekezo"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Iyalayisha..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Isichazamazwi sakho esisemqoka"</string>
+    <string name="cancel" msgid="6830980399865683324">"Khansela"</string>
+    <string name="install_dict" msgid="180852772562189365">"Faka"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Khansela"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Susa"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Ulimi olukhethiwe kudivayisi yakho yeselula linesichazamazwi esitholakalayo.&lt;br/&gt; Sincoma &lt;b&gt;ukulanda&lt;/b&gt; isichazamazwi sesi-<xliff:g id="LANGUAGE">%1$s</xliff:g> ukwenza kangcono isipiliyoni sakho sokuthayipha.&lt;br/&gt; &lt;br/&gt; Ukulanda ukungathatha iminithi noma amaminithi amabili nge-3G. Amashaja angasebenza uma ungenalo &lt;b&gt;icebo ledatha elinganqunyelwe&lt;/b&gt;.&lt;br/&gt; Uma ungenasiqinisekiso sokuthi iliphi icebo ledatha onalo, sincoma ukuthola uxhumo lwe-Wi-Fi ukuze uqale ukulanda ngokuzenzakalelayo.&lt;br/&gt; &lt;br/&gt; Ithiphu: Ungalanda futhi ususe izichazamazwi ngokuya ku-&lt;b&gt;Ulimi nokungenayo&lt;/b&gt; kumenyu ye-&lt;b&gt;Izilungiselelo&lt;/b&gt; yedivayisi yakho yeselula."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Landa manje (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Landa nge-Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Isichazamazwi se-<xliff:g id="LANGUAGE">%1$s</xliff:g> siyatholakala"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Cindezela ukuze ubuyekeze uphinde ulande"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Ukulanda: iziphakamiso ze-<xliff:g id="LANGUAGE">%1$s</xliff:g> zizolunga maduze."</string>
 </resources>
